# ExcellenceV2

./: CMakeLists.txt  README.md  platformio.ini
docs/: ISSUE_SLICES.md  PRD.md
src/: CMakeLists.txt  main.c
src/components/: digital_output.c  digital_output.h
src/config/: node_identity.c  node_identity.h
src/delivery/: delivery_tracker.c  delivery_tracker.h
src/network/: espnow_transport.c  espnow_transport.h
src/protocol/: network_message.c  network_message.h
src/routing/: relay_forwarder.c  relay_forwarder.h
src/topology/: topology_store.c  topology_store.h
